hphp/hack/test/typecheck/tuple_rvalue_only.php.constraint_method_call.exp
ERROR: File "tuple_rvalue_only.php", line 5, characters 3-15:
Cannot use unstable feature: `shape_and_tuple_destructuring` (Parsing[1002])
ERROR: File "tuple_rvalue_only.php", line 5, characters 3-15:
Typing error (Typing[4110])
  File "tuple_rvalue_only.php", line 5, characters 3-15:
  Expected `(_, _, mixed...)` resulting from a shape or tuple destructuring pattern
  File "tuple_rvalue_only.php", line 5, characters 19-27:
  But got `vec<int>`
